--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -1,4 +1,4 @@
 # Blockchain-specific environment template
 
-BLOCKCHAIN_RPC_URL=http://127.0.0.1:8545
+BLOCKCHAIN_RPC_URL=https://rpc-amoy.polygon.technology
 DEV_WALLET_PRIVATE_KEY=0xYOUR_LOCAL_DEV_PRIVATE_KEY
